	of $ac_xdir.  Not only is `test -e' not portable, but the test isn't
	necessary at all;  the following mkdir ends up accomplishing the
	same goal.  Suggestion from Alexandre Oliva.

	* acgeneral.m4 (_AC_INIT_PREPARE_ENVIRONMENT) [setting IFS]: Be careful
	to use space, tab and new line, in precisely that order.

2000-03-20  Akim Demaille  <akim@epita.fr>

	Give an identity to `configure' scripts.

	* acgeneral.m4 (AC_PACKAGE): New macro.
	(_AC_COPYRIGHT_SEPARATOR): Remove.
	(AC_COPYRIGHT): Adjust.
	(_AC_INIT_HELP, _AC_INIT_VERSION): Name the package you configure
	when you want.
	(_AC_INIT): Adjust.
	* configure.in (AC_PACKAGE): Add.

2000-03-18  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.

2000-03-20  Akim Demaille  <akim@epita.fr>

	Don't rely on RS = "\0" to swallow the whole input as a single
	record, this is not portable: mawk and nawk understand it as RS =
	"".  gawk understands it as expected.

	* autoconf.sh (translate_awk::BEGIN): No longer change RS.
	(translate_awk::body): Move to the END.
	Instead, accumulate the input in `request'.

2000-03-20  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Testing Values and Files): Be a subsection of
	`Portable Shell Programming'.
	(Shell Substitutions, Limitations of Usual Tools): New subsections.

2000-03-17  Akim Demaille  <akim@epita.fr>

	Use a single tool to reformat the raw `configure' script output by
	m4.
	Suggested by Paul Eggert.

	* autoconf.sh: Stop playing with 2 seds and an AWK to finalize
	`configure', a single AWK program is enough.

2000-03-17  Akim Demaille  <akim@epita.fr>

	In Autoconf 2.13, although AC_OUTPUT_COMMANDS did double quote its
	arguments, AC_OUTPUT arguments 2 and 3 were not!  Currently,
	AC_OUTPUT over quotes too: stop that.
	Reported by Martin Buchholz.

	* doc/autoconf.texi (Output): Don't expand on the ternary
	AC_OUTPUT.
	* acgeneral.m4 (AC_OUTPUT): Don't over quote $2 and $3.

2000-03-17  Joseph S. Myers  <jsm28@cam.ac.uk>
