@@ -10,6 +10,11 @@
 
 2000-03-20  Akim Demaille  <akim@epita.fr>
 
+	* acgeneral.m4 (AC_ARG_ENABLE, AC_ARG_WITH): Double quote the head
+	of the help snippet.
+
+2000-03-18  Akim Demaille  <akim@epita.fr>
+
 	Give an identity to `configure' scripts.
 
 	* acgeneral.m4 (AC_PACKAGE): New macro.
